<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dcaiti.mosaic.app</groupId>
    <artifactId>traffic-state-estimation</artifactId>
    <version>25.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Traffic State Estimation Applications for Eclipse MOSAIC</name>
    <description>
        This package provides an application suite to evaluate traffic state estimation approaches based on Floating Car Data (FCD).
    </description>

    <inceptionYear>2023</inceptionYear>
    <organization>
        <name>Fraunhofer FOKUS</name>
        <url>https://www.fokus.fraunhofer.de/</url>
    </organization>

    <licenses>
        <license>
            <name>Eclipse Public License - v 2.0</name>
            <url>https://www.eclipse.org/legal/epl-2.0</url>
        </license>
    </licenses>

    <properties>
        <mosaic.version>${project.version}</mosaic.version>
        <version.commons-math3>3.6.1</version.commons-math3>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.eclipse.mosaic</groupId>
            <artifactId>mosaic-application</artifactId>
            <version>${mosaic.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>${version.commons-math3}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>repo.eclipse.org</id>
            <name>MOSAIC Repository</name>
            <url>https://repo.eclipse.org/content/repositories/mosaic</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>